samples/_failures_safe/1761318074_8bd571_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_12bfffc1.c: In function ‘main’:
./samples/SAFE/__tmp_12bfffc1.c:143:16: error: missing terminating " character
  143 |         printf("Error: Invalid input\n
      |                ^~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_12bfffc1.c:143:9: error: expected expression at end of input
  143 |         printf("Error: Invalid input\n
      |         ^~~~~~
./samples/SAFE/__tmp_12bfffc1.c:143:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_12bfffc1.c:143:9: error: expected declaration or statement at end of input
